packaging: let Debian package depends on sensible-utils
This fixes the following Lintian error:

  E: mercurial-common: missing-depends-on-sensible-utils etc/mercurial/hgrc.d/default-tools.rc

--- a/contrib/packaging/debian/control
+++ b/contrib/packaging/debian/control
@@ -39,6 +39,7 @@ Description: fast, easy to use, distributed revision control tool.
 Package: mercurial-common
 Architecture: all
 Depends:
+ sensible-utils,
  ${misc:Depends},
  ${python3:Depends},
 Recommends: mercurial (= ${source:Version}), ca-certificates
