--- a/contrib/packaging/debian/rules
+++ b/contrib/packaging/debian/rules
@@ -14,7 +14,7 @@ override_dh_auto_test:
 	http_proxy='' dh_auto_test -- TESTFLAGS="-j$(CPUS)"
 
 override_dh_python3:
-	dh_python3
+	dh_python3 --shebang=/usr/bin/python3
 	find debian/mercurial/usr/share -type d -empty -delete
 
 override_dh_install:
