packaging: remove version info from Breaks+Replaces in Debian package
The versioned Breaks: and Replaces: cause problem when trying to install
our package over the one in Debian.

  $ sudo apt install ./packages/debian-buster/mercurial_5.2~rc0+15-buster-a2ff3aff81d2_amd64.deb
  Reading package lists... Done
  Building dependency tree
  Reading state information... Done
  Note, selecting 'mercurial' instead of './packages/debian-buster/mercurial_5.2~rc0+15-buster-a2ff3aff81d2_amd64.deb'
  Some packages could not be installed. This may mean that you have
  requested an impossible situation or if you are using the unstable
  distribution that some required packages have not yet been created
  or been moved out of Incoming.
  The following information may help to resolve the situation:

  The following packages have unmet dependencies:
   mercurial : Breaks: mercurial-common (< 5.2~rc0+15-buster-a2ff3aff81d2) but 5.2~rc0-1 is to be installed
  E: Unable to correct problems, you have held broken packages.

Removing version information resolves the situation.

--- a/contrib/packaging/debian/control
+++ b/contrib/packaging/debian/control
@@ -23,8 +23,8 @@ Depends:
  ${python3:Depends},
 Recommends: ca-certificates
 Suggests: wish
-Replaces: mercurial-common (<< ${source:Version})
-Breaks: mercurial-common (<< ${source:Version})
+Replaces: mercurial-common
+Breaks: mercurial-common
 Architecture: any
 Description: fast, easy to use, distributed revision control tool.
  Mercurial is a fast, lightweight Source Control Management system designed
