--- a/contrib/packaging/docker/fedora.template
+++ b/contrib/packaging/docker/fedora.template
@@ -1,4 +1,4 @@
-FROM fedora:29
+FROM fedora:%OS_RELEASE%
 
 RUN groupadd -g 1000 build && \
     useradd -u 1000 -g 1000 -s /bin/bash -d /build -m build
