heptapod-ci: add a job to test the rust version of Mercurial
The rust version of Mercurial is not currently tested by anything else. So it
get quite important that developer runs it.

Differential Revision: https://phab.mercurial-scm.org/D8017

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -60,3 +60,16 @@ test-py3-pure:
     variables:
         RUNTEST_ARGS: "--pure --blacklist /tmp/check-tests.txt"
         PYTHON: python3
+
+test-py2-rust:
+    <<: *runtests
+    variables:
+        HGWITHRUSTEXT: cpython
+        RUNTEST_ARGS: "--blacklist /tmp/check-tests.txt"
+
+test-py3-rust:
+    <<: *runtests
+    variables:
+        HGWITHRUSTEXT: cpython
+        RUNTEST_ARGS: "--blacklist /tmp/check-tests.txt"
+        PYTHON: python3
