heptapod-ci: also run the dedicated rust test for the rust code
The Rust code has various standard rust test that are fast to run. So let's run them.

Differential Revision: https://phab.mercurial-scm.org/D8014

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -23,3 +23,13 @@ checks-py3:
     <<: *runtests
     variables:
         PYTHON: python3
+
+rust-cargo-test-py2: &rust_cargo_test
+    script:
+        - echo "python used, $PYTHON"
+        - make rust-tests
+
+rust-cargo-test-py3:
+    <<: *rust_cargo_test
+    variables:
+        PYTHON: python3
