tests: finally fix up test-fuzz-targets.t
It's been failing on my workstation for a while, since I have a new enough
LLVM that I had the fuzzer goo, but not so new that I actually had
FuzzedDataProvider. This is a better solution all around in my opinion.

I _believe_ this should let us run these tests on most systems, even
those using GCC instead of clang. That said, my one attempt to test
this on my macOS laptop failed miserably, and I don't feel like doing
more work on this right now.

Differential Revision: https://phab.mercurial-scm.org/D7566

--- a/contrib/fuzz/Makefile
+++ b/contrib/fuzz/Makefile
@@ -14,7 +14,7 @@ PYTHON_CONFIG ?= $$OUT/sanpy/bin/python-config
 
 CXXFLAGS += -Wno-deprecated-register
 
-all: bdiff mpatch xdiff
+all: standalone_fuzz_target_runner.o oss-fuzz
 
 standalone_fuzz_target_runner.o: standalone_fuzz_target_runner.cc
 
