fuzz: suppress deprecated-register warnings in our compile
These come from the Python.h headers still using the `register`
keyword and our use of C++17. I think this will go away when we're
using Python 3 for our fuzzing, but that can come later.

Differential Revision: https://phab.mercurial-scm.org/D7562

--- a/contrib/fuzz/Makefile
+++ b/contrib/fuzz/Makefile
@@ -3,6 +3,8 @@ CXX = clang++
 
 LIB_FUZZING_ENGINE ?= -lFuzzingEngine
 
+CXXFLAGS += -Wno-deprecated-register
+
 all: bdiff mpatch xdiff
 
 pyutil.o: pyutil.cc pyutil.h
