packaging: update Ubuntu docker build dependencies to Python 3
Changeset 7574ccd87200f02e updated the Debian docker builds to Python 3. In doing
so, the Ubuntu docker-based builds broke, as the Dockerfile does not
include the new dependencies as specified in `contrib/packaging/debian/control`.

This commit changes the dependencies in the Ubuntu Dockerfile template
to their Python 3 equivalents, fixing `make docker-ubuntu-bionic`.

Differential Revision: https://phab.mercurial-scm.org/D7810

--- a/contrib/packaging/docker/ubuntu.template
+++ b/contrib/packaging/docker/ubuntu.template
@@ -10,7 +10,8 @@ RUN apt-get update && apt-get install -y \
   dh-python \
   less \
   python \
-  python-all-dev \
-  python-docutils \
+  python3-all \
+  python3-all-dev \
+  python3-docutils \
   unzip \
   zip
