heptapod-ci: colorize output
The run result are nicer to read with color.

Differential Revision: https://phab.mercurial-scm.org/D8012

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -10,4 +10,4 @@ before_script:
 checks-py2:
     script:
         - cd tests/
-        - python run-tests.py --time test-check-*.*
+        - python run-tests.py --color=always --time test-check-*.*
