--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -6,6 +6,7 @@ before_script:
     - hg clone . /tmp/mercurial-ci/ --noupdate
     - hg -R /tmp/mercurial-ci/ update `hg log --rev '.' --template '{node}'`
     - cd /tmp/mercurial-ci/
+    - (cd tests; ls -1 test-check-*.*) > /tmp/check-tests.txt
 
 variables:
     PYTHON: python
@@ -14,14 +15,18 @@ variables:
     script:
         - cd tests/
         - echo "python used, $PYTHON"
-        - $PYTHON run-tests.py --color=always --time test-check-*.*
+        - echo "$RUNTEST_ARGS"
+        - $PYTHON run-tests.py --color=always $RUNTEST_ARGS
 
 checks-py2:
     <<: *runtests
+    variables:
+        RUNTEST_ARGS: "--time --test-list /tmp/check-tests.txt"
 
 checks-py3:
     <<: *runtests
     variables:
+        RUNTEST_ARGS: "--time --test-list /tmp/check-tests.txt"
         PYTHON: python3
 
 rust-cargo-test-py2: &rust_cargo_test
@@ -32,4 +37,15 @@ rust-cargo-test-py2: &rust_cargo_test
 rust-cargo-test-py3:
     <<: *rust_cargo_test
     variables:
+        PYTHON: python3
+
+test-py2:
+    <<: *runtests
+    variables:
+        RUNTEST_ARGS: "--blacklist /tmp/check-tests.txt"
+
+test-py3:
+    <<: *runtests
+    variables:
+        RUNTEST_ARGS: "--blacklist /tmp/check-tests.txt"
         PYTHON: python3
