windows: enforce the module policy to be c for test
This is the same as what we do with the linux test.

Differential Revision: https://phab.mercurial-scm.org/D11100

--- a/contrib/heptapod-ci.yml
+++ b/contrib/heptapod-ci.yml
@@ -169,5 +169,6 @@ windows-py3:
       - windows
     timeout: 2h
     variables:
+        TEST_HGMODULEPOLICY: "c"
         RUNTEST_ARGS: "--blacklist /tmp/check-tests.txt"
         PYTHON: py -3
